[gd_scene load_steps=3 format=2]

[ext_resource path="res://DDU spil grafik/SU_MÃ¸nt.png" type="Texture" id=1]
[ext_resource path="res://SU1.gd" type="Script" id=2]

[node name="SU" type="Node2D"]

[node name="SU1" type="Area2D" parent="."]
position = Vector2( 583, 489 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="SU1"]
position = Vector2( 2, 0 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SU1"]
position = Vector2( 1, -1 )
polygon = PoolVector2Array( 17, -23.9, 17, -21.7, 24, -14, 24, 15, 15.7, 24, -17, 24, -24, 17.7, -24, -15, -17, -23.7, 15.5, -24 )

[node name="SU2" type="Area2D" parent="."]
position = Vector2( 590, 320 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="SU2"]
position = Vector2( 2, 0 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SU2"]
position = Vector2( 1, -1 )
polygon = PoolVector2Array( 17, -23.9, 17, -21.7, 24, -14, 24, 15, 15.7, 24, -17, 24, -24, 17.7, -24, -15, -17, -23.7, 15.5, -24 )

[node name="SU3" type="Area2D" parent="."]
position = Vector2( 495, 584 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="SU3"]
position = Vector2( 2, 0 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SU3"]
position = Vector2( 1, -1 )
polygon = PoolVector2Array( 17, -23.9, 17, -21.7, 24, -14, 24, 15, 15.7, 24, -17, 24, -24, 17.7, -24, -15, -17, -23.7, 15.5, -24 )

[node name="SU4" type="Area2D" parent="."]
position = Vector2( 490, 402 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="SU4"]
position = Vector2( 2, 0 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SU4"]
position = Vector2( 1, -1 )
polygon = PoolVector2Array( 17, -23.9, 17, -21.7, 24, -14, 24, 15, 15.7, 24, -17, 24, -24, 17.7, -24, -15, -17, -23.7, 15.5, -24 )

[connection signal="body_entered" from="SU1" to="SU1" method="_on_SU1_body_entered"]
[connection signal="body_entered" from="SU2" to="SU2" method="_on_SU2_body_entered"]
[connection signal="body_entered" from="SU3" to="SU3" method="_on_SU3_body_entered"]
[connection signal="body_entered" from="SU4" to="SU4" method="_on_SU4_body_entered"]
